--- a/journal/202003.md
+++ b/journal/202003.md
@@ -14,38 +14,38 @@ Highlights for March:
 
 ## Development
 
-Unless otherwise noted, the work reported here has the status "merged to master", meaning that it was completed, reviewed and integrated into the source code that anyone can build, but is not yet available in release binaries.
+Unless otherwise noted, the work reported here has the status "merged to master". It means that the work is completed, reviewed and integrated into the source code that advanced users can build, but is not yet available in release binaries for regular users.
 
-[dcrd](https://github.com/decred/dcrd): Merged work:
+[dcrd](https://github.com/decred/dcrd):
 
-- ECDSA signatures [decoupled](https://github.com/decred/dcrd/pull/2139) from secp256k1 package. This makes clear that ECDSA is only one possible digital signature algorithm, and to enable Schnorr signatures to be made first class citizens of the codebase. 
+- ECDSA signatures [decoupled](https://github.com/decred/dcrd/pull/2139) from secp256k1 package to make it clear that ECDSA is only one possible digital signature algorithm, and to enable Schnorr signatures to be made first class citizens of the codebase 
 - exported [field value type](https://github.com/decred/dcrd/pull/2134) to allow external callers to perform optimized field math
-- signature verification further optimized by avoiding expensive operations 
+- signature verification further optimized by minimizing expensive operations 
 - added method to [clear](https://github.com/decred/dcrd/pull/2117) private key from memory and [reduced](https://github.com/decred/dcrd/pull/2131) number of internal copies of private keys to enhance security against memory scraping
 - big integers [removed](https://github.com/decred/dcrd/pull/2107) completely from signature parsing and signing operations in favor of the specialized mod n scalar code
 - schnorr signing and verivication tests [reworked](https://github.com/decred/dcrd/pull/2128) to resolve multiple issues
 - prevented the misuse of code in several areas
 - removed unused code
 
-A vulnerability was [disclosed](https://bounty.decred.org/2020/03/status-update/) that allowed a potential multi-day memory exhaustion attack that could lead to a node crash in dcrd 1.4.0. On Mar 13 the network forked to new consensus rules implemented in dcrd 1.5.0 and higher which contain a fix. { to clarify, this was a bug in implementation but not in consensus rules, right? }
+A vulnerability was [disclosed](https://bounty.decred.org/2020/03/status-update/) that allowed a potential multi-day memory exhaustion attack that could lead to a node crash in dcrd v1.4.0. On Mar 13 the network forked to new consensus rules implemented in dcrd v1.5.0. Since this and later versions contain a fix for the vulnerability, it is now mitigated. { to clarify, this was a bug in implementation but not in consensus rules, right? }
 
 Decred has less than 16% of equal code with btcd according to an [analysis](https://coincode.sh/c/dcr/) by CoinCode.sh.
 
 [dcrwallet](https://github.com/decred/dcrwallet):
 
 - `fundrawtransaction` command [implemented](https://github.com/decred/dcrwallet/pull/1706) that adds unsigned inputs and change output to a raw transaction
-- wallet operations [switched](https://github.com/decred/dcrwallet/pull/1648) to use version 2 commited filters { didn't v1.5 already ship with v2 filter support? does it mean v2 filters will only be used in release v1.6 }
-- `getaddressesbyaccount` command [fixed](https://github.com/decred/dcrwallet/pull/1695) to also return imported addresses from the `imported` account
+- wallet operations [switched](https://github.com/decred/dcrwallet/pull/1648) to use version 2 commited filters { didn't v1.5 already ship with v2 filter support? does it mean v2 filters will only be used in release v1.6? }
+- `getaddressesbyaccount` command [fixed](https://github.com/decred/dcrwallet/pull/1695) to also return imported addresses for the `imported` account
 - unencrypted P2SH redeem scripts are [moved](https://github.com/decred/dcrwallet/pull/1688) to address manager storage. { why? explain or drop }
 - internal improvements to efficiency and semantics
 - cleanup to remove deprecated and unused code
 
 [Decrediton](https://github.com/decred/decrediton):
 
-- support for [cold staking](https://github.com/decred/decrediton/pull/2424) { is it full support tangible by the user or one step to it? if the latter, clarify what exactly is added. and what is the ticket signing flow? }
+- support for [cold staking](https://github.com/decred/decrediton/pull/2424) { is it full support tangible by the user or one step to it? if the latter, clarify what exactly is added. and what is the ticket signing flow with this cold staking? }
 - support for [importing scripts](https://github.com/decred/decrediton/pull/2423) in watch-only wallets { is this correct wording? }
 - retrieve passed [agendas](https://github.com/decred/decrediton/pull/2442) from dcrdata
-- check for [new proposals](https://github.com/decred/decrediton/pull/2420)
+- check for [new proposals](https://github.com/decred/decrediton/pull/2420) on the Governance tab
 - responsive [proposal view](https://github.com/decred/decrediton/pull/2444), [address](https://github.com/decred/decrediton/pull/2416) display on overview and transaction views, and other UI tweaks
 
 In development:
@@ -59,15 +59,15 @@ In development:
 
 CMS:
 
-- ability to assign proposal [ownership](https://github.com/decred/politeia/pull/1135)
-- [deactivate](https://github.com/decred/politeia/pull/1154) temporary contractor account on paid invoice and require admin approval to allow another invoice
+- ability to assign proposal [ownership](https://github.com/decred/politeia/pull/1135), which will be used in upcoming changes to let proposal owners see what is billed against their proposal
+- ability to [deactivate](https://github.com/decred/politeia/pull/1154) temporary contractor account on paid invoice and require admin approval to allow another invoice
 - [preload](https://github.com/decred/politeiagui/pull/1829) user info to assist in authoring invoices
 - redesign work started in October finally [merged](https://github.com/decred/politeiagui/pull/1828). This large change adds 9K and deletes 24K lines of code.
-  - { any comments? what is pi-ui and why? also, why redesign is neccessary for an internal system? dark mode? }
+  - { any comments? what is pi-ui and what motivated it? why redesign is neccessary for an internal system, or is it more than just a new skin? dark mode? }
 
 Up next:
 
-- tlog implementation is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to start in April and take ~2 months. This will make the foundation to make Politeia more scalable and will also fix the annoying bug of duplicate comments.
+- tlog implementation is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to start in April and take ~2 months. This will lay the foundation to make Politeia more scalable and will also fix the annoying bug of duplicate comments.
   - { how to interpret "starting the tlog implementation" if we've reported a bunch of tlog work already? }
   - { is there a spec describing how tlog backend will work? }
 
@@ -91,10 +91,12 @@ Up next:
 In development:
 
 - enable and test [SPV mode](https://github.com/decred/dcrlnd/pull/95) for remote wallets { what is "remote wallet"? }
-- new [chainscan](https://github.com/decred/dcrlnd/pull/83) package that uses committed filters to detect transactions relevant for the LN node more efficiently and operates in SPV mode if necessary
+- new [chainscan](https://github.com/decred/dcrlnd/pull/83) package that uses committed filters to detect transactions relevant for the LN node more efficiently and can also operate in SPV mode
 - [implementations](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package that use embedded and remote dcrwallet as a source of chain events. This allows to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
 
-[dcrdex](https://github.com/decred/dcrdex): New completed work:
+{ how big is dcrlnd in SPV mode? what cool scenarios does it allow? }
+
+[dcrdex](https://github.com/decred/dcrdex):
 
 - [RPC client](https://github.com/decred/dcrdex/pull/181) for DEX client's RPC server (_ouch_)
 - ability to [place orders](https://github.com/decred/dcrdex/pull/195) through the GUI
@@ -106,7 +108,7 @@ In development:
 
 A total of 19 pull requests merged from 6 contributors adding 11K and deleting 3K lines of code (commit summary [here](https://github.com/decred/dcrdex/compare/94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d...d3bd07f822200041092bdc85f5c1b752b3c9ee24)).
 
-Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/status/1245075450625511425) first order-driven atomic swap on testnet!
+Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/status/1245075450625511425) the first order-driven atomic swap on testnet!
 
 [dcrandroid](https://github.com/decred/dcrandroid):
 
@@ -116,21 +118,21 @@ Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/st
 [dcrios](https://github.com/raedahgroup/dcrios):
 
 - revamped [Send page](https://github.com/raedahgroup/dcrios/pull/557)
-- UI for the [More menu](https://github.com/raedahgroup/dcrios/pull/559)
-- new [wallet selector](https://github.com/raedahgroup/dcrios/pull/600) widget
-- reading amount from [QR code](https://github.com/raedahgroup/dcrios/pull/581)
+- new UI for [More menu](https://github.com/raedahgroup/dcrios/pull/559)
+- new [wallet selector](https://github.com/raedahgroup/dcrios/pull/600) widget for Transactions page
+- reading DCR amount from [QR codes](https://github.com/raedahgroup/dcrios/pull/581)
 - multiple bug fixes and UI tweaks
 
 [dcrdata](https://github.com/decred/dcrdata): Small tweaks and bug fixes.
 
-[tinydecred](https://github.com/decred/tinydecred): Completed work:
+[tinydecred](https://github.com/decred/tinydecred):
 
 - [staking view](https://github.com/decred/tinydecred/pull/53) showing spent, unspent and live tickets
 - simple [accounts view](https://github.com/decred/tinydecred/pull/94)
 - simple [views](https://github.com/decred/tinydecred/pull/125) to create accounts and send DCR
 - [account discovery](https://github.com/decred/tinydecred/pull/124)
 - changed tests to use [in-memory](https://github.com/decred/tinydecred/pull/116) databases
-- increased overall test coverage [to 98%](https://github.com/decred/tinydecred/issues/70#issuecomment-606669036) and fixed a few bugs uncovered in the process, all files have at least 94%
+- increased overall test coverage [to 98%](https://github.com/decred/tinydecred/issues/70#issuecomment-606669036) and fixed a few bugs uncovered in the process, all files now have at least 94% coverage
 
 A total of 56 pull requests merged from 3 contributors adding 11K and deleting 6K lines of code (commit summary [here](https://github.com/decred/tinydecred/compare/fa081e7f17d303f0eea31e9f07499db4e0acc53a...e1ef1ff72cb924d27098f9df151f6805d5db3e90)).
 
