--- a/journal/202003.md
+++ b/journal/202003.md
@@ -159,18 +159,7 @@ Dev activity stats for March: {n} active PRs, {n} master commits, {n}K added and
 
 ## People
 
-Welcome to new first time contributors with code merged to master: @unimere ([decrediton](https://github.com/decred/decrediton/commits?author=unimere))
-
-Congratulations to new [contributors](https://decred.org/contributors/) listed on decred.org:
-
-- {name, sort names alphabetically} ({nickname}, {title or domain})
-- {if we dropped removals, shall we also drop additions to not focus people on this page? https://github.com/xaur/decred-news/blob/docs/guidelines.md#reporting-departures } 
-
-{No additions this month only a name change}
-
-{welcome new corporate contractors with short intros, if any}
-
-{interviews about people}
+Welcome to new first time contributors with code merged to master: @unimere ([decrediton](https://github.com/decred/decrediton/commits?author=unimere)).
 
 Community stats:
 
