--- a/journal/202003.md
+++ b/journal/202003.md
@@ -177,17 +177,17 @@ Community stats:
 
 In March the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,713 DCR and spent 17,153 DCR. Using March's daily average DCR/USD rate of $13.40, this is $184K received and $230K spent. At February's average daily rate of $20.48, the USD figure billed for work completed in that month is $281K. As of Apr 3, Treasury balance is 640K DCR (7.41 million USD at $11.58).
 
-This month saw the publication of 4 new proposals. 
+This month saw the publication of 4 new proposals.
 
-The new [proposal](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f) from the DCRComic team requested an increased budget of $16,200 for 12 more comics plus supporting activity, with an extra $150 per comic added for extra time spent adapting the assets for social media use. The proposal has since been put on [hold](https://twitter.com/DCRComic/status/1243197581104041984?s=20) to re-formulate the cast of characters, after some criticism that Stakey was being over-used in representing many different roles in the Decred ecosystem.
+The new [proposal](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f) from the DCRComic team requested an increased budget of $16,200 for 12 more comics plus supporting activity, with an extra $150 per comic added for extra time spent adapting the assets for social media use. The proposal has since been put on [hold](https://twitter.com/DCRComic/status/1243197581104041984) to reformulate the cast of characters, after some criticism that Stakey was being over-used in representing many different roles in the Decred ecosystem.
 
-The US Marketing [proposal](https://proposals.decred.org/proposals/c830ea5afea45a0aabf4092d1bea51fb10b8bfa2d8474aac03224f0f94d3d1af) was, after being edited down to $177,800 to remove the community organizing of events in light of Covid-19, approved with 74% support and voter turnout of 31%. 
+The US Marketing [proposal](https://proposals.decred.org/proposals/c830ea5afea45a0aabf4092d1bea51fb10b8bfa2d8474aac03224f0f94d3d1af) was, after being edited down to $177,800 to remove the community organizing of events in light of COVID-19, approved with 74% support and voter turnout of 31%.
 
-The Brazilian marketing [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5), which requests $108K for the rest of the year was also approved, with 65% support and turnout of 34%. This proposal was edited to say that events will not be organized or billed for while the Covid-19 situation persists, but the item was not removed from the budget and some of this activity may take place later in the year.
+The Brazilian marketing [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5), which requests $108K for the rest of the year was also approved, with 65% support and turnout of 34%. This proposal was edited to say that events will not be organized or billed for while the COVID-19 situation persists, but the item was not removed from the budget and some of this activity may take place later in the year.
 
 Two further proposals were submitted and are under discussion. A [proposal](https://proposals.decred.org/proposals/d3b16861a7e555db2fdd25b589123f4b6c4289c857fbdff329a4ffb1cb60c4d9) from PolisPay App seeks $5,000 to support DCR. There is also a [proposal](https://proposals.decred.org/proposals/7d42c6f4bf3059b64789185af615c1df97cb61a379425933be5ff01d074ed4d5) to fund the Decred Daily twitter [account](https://twitter.com/Decred_Daily) for 6 months and make a website for it (total budget $5,280).
 
-The Market Making proposal from i2 Trading is nearing the end of the six months of Market Making activity, this commenced in late October 2019 and so will come to an end in late April 2020. i2's trading logs continue to be audited monthly by Company 0 and performance has been found to be satisfactory. i2 are planning to submit a proposal to continue MM activity for Decred, but it will be scaled down to reflect the current market conditions.
+The Market Making proposal from i2 Trading is nearing the end of the six months of market making activity, this commenced in late October 2019 and so will come to an end in late April 2020. i2's trading logs continue to be audited monthly by Company 0 and performance has been found to be satisfactory. i2 are planning to submit a proposal to continue MM activity for Decred, but it will be scaled down to reflect the current market conditions.
 
 @bee has extensively [commented](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/) on the 2019 Marketing Report and shared his vision for moving forward.
 
