Dev dcrandroid, dcrios add testnet links

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -115,6 +115,8 @@ Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/st
 - added [statistics page](https://github.com/decred/dcrandroid/pull/440)
 - UI tweaks and fixes
 
+Testnet version of the next release is available [here](https://play.google.com/apps/testing/com.decred.dcrandroid.testnet).
+
 [dcrios](https://github.com/raedahgroup/dcrios):
 
 - revamped [Send page](https://github.com/raedahgroup/dcrios/pull/557)
@@ -122,6 +124,8 @@ Congratulations to dcrdex team for [coordinating](https://twitter.com/chappjc/st
 - new [wallet selector](https://github.com/raedahgroup/dcrios/pull/600) widget for Transactions page
 - reading DCR amount from [QR codes](https://github.com/raedahgroup/dcrios/pull/581)
 - multiple bug fixes and UI tweaks
+
+Testnet version of the next release is available [here](https://testflight.apple.com/join/7KL4VnB2).
 
 [dcrdata](https://github.com/decred/dcrdata): Small tweaks and bug fixes.
 
@@ -451,5 +455,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, elian, degeri, l1ndseymm, pablito, richardred, s\_ben
-- reviews and feedback: adcade, ammarooni, davecgh, emiliomann, jrick, michae2xl
+- reviews and feedback: adcade, ammarooni, davecgh, emiliomann, jrick, michae2xl, raedah
 - title image: {}
