Dev politeia clarify tlog

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -57,6 +57,10 @@ In development:
 - [invalidate](https://github.com/decred/politeia/pull/1159) sessions on password change
 - test improvements and bug fixes
 
+tlog integration has begun and is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to take ~2 months. In [July 2019](201907.md#development) we've inaccurately reported the start of tlog integration but that work was actually a reference implementation to serve as a proof of concept and demonstrate that Google's [Trillian](https://github.com/google/trillian) data store can replace existing Git backend. It was [merged](https://github.com/decred/politeia/pull/951) in August and contained a [client/server](https://github.com/decred/politeia/tree/master/tlog) with basic functionality for storing documents. This experience gave enough instight to know that it will work. Next step is to actually write a Politeia backend that uses Trillian.
+
+Major advantages of the tlog backend is it will make Politeia more scalable and allow to censor content after it's been made public, while keeping the audit trail of all data ever submitted. It will also allow a proper fix of the duplicate comments bug.
+
 CMS:
 
 - ability to assign proposal [ownership](https://github.com/decred/politeia/pull/1135), which will be used in upcoming changes to let proposal owners see what is billed against their proposal
@@ -64,12 +68,6 @@ CMS:
 - [preload](https://github.com/decred/politeiagui/pull/1829) user info to assist in authoring invoices
 - redesign work started in October finally [merged](https://github.com/decred/politeiagui/pull/1828). This large change adds 9K and deletes 24K lines of code.
   - { any comments? what is pi-ui and what motivated it? why redesign is neccessary for an internal system, or is it more than just a new skin? dark mode? }
-
-Up next:
-
-- tlog implementation is [projected](https://github.com/decred/politeia/issues/1112#issuecomment-606147106) to start in April and take ~2 months. This will lay the foundation to make Politeia more scalable and will also fix the annoying bug of duplicate comments.
-  - { how to interpret "starting the tlog implementation" if we've reported a bunch of tlog work already? }
-  - { is there a spec describing how tlog backend will work? }
 
 [dcrstakepool](https://github.com/decred/dcrstakepool):
 
@@ -456,5 +454,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, elian, degeri, l1ndseymm, pablito, richardred, s\_ben
-- reviews and feedback: adcade, ammarooni, davecgh, emiliomann, jholdstock, jrick, matheusd, michae2xl, raedah
+- reviews and feedback: adcade, ammarooni, davecgh, emiliomann, jholdstock, jrick, lukebp, matheusd, michae2xl, raedah
 - title image: {}
