Dev dcrlnd add SPV stuff

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -93,7 +93,7 @@ In development:
 - [implementations](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package that use embedded and remote dcrwallet as a source of chain events. This allows to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
 - building on the above, enable and test [SPV mode](https://github.com/decred/dcrlnd/pull/95) for remote wallets ("remote wallet" is the connection mode where dcrlnd connects to an already running dcrwallet instance, i.e. does not need its own embedded wallet with a separate seed)
 
-{ how big is dcrlnd in SPV mode? what cool scenarios does it allow? }
+> SPV mode is a requirement for mobile LN wallets. It's likely SPV will be the dominant sync mode even in desktop wallets, so it's essential for dcrlnd to support SPV mode. It's also the last item of the "immediate work" section of my "roadmap" of sorts that I outlined in the [announcement post](https://matheusd.com/post/announcing-dcrlnd/) for LN, so this concludes the majority of the porting effort from lnd to dcrlnd. Concluding SPV means we can start exploring more exotic changes that are available in Decred (such as [PTLCs](https://suredbits.com/payment-points-monotone-access-structures/) which depend on the Schnorr work that @davecgh is also concluding). ([@matheusd](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$1586258547807544APZNe:matrix.org))
 
 [dcrdex](https://github.com/decred/dcrdex):
 
