--- a/journal/202003.md
+++ b/journal/202003.md
@@ -210,18 +210,13 @@ Nodes: Throughout [March](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from
 
 ## Integrations
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best in a given month's compilation }
+Probit [added](https://twitter.com/ProBit_Exchange/status/1235450770100649986) support for DCR/KRW and DCR/USDT pairs to their exchange.
 
+Exmo.com had a sudden DCR [outage](https://twitter.com/Exmo_Com/status/1240255377507303431) that coincided with the fork, the services [resumed](https://twitter.com/Exmo_Com/status/1240627750005870592) the next day. Currently Exmo is the only integration [funded](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) by stakeholders.
 
-Probit [added](https://twitter.com/ProBit_Exchange/status/1235450770100649986) support for DCR/KRW and DCR/USDT pairs to their exchange. { did anyone test it? }
+User AGspearo was not able to access their [funds](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) due to the VSP d1pool.com shutting down without notice and them not having access to their redeem script. AGspearo spent a lot of time on support trying to resolve this issue but ultimately they were unable to get their funds. @davecgh broke down the issue as a [comment](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkiac45) and also said a possible consensus change might solve these [issues](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkku35k).  If you are reading this and do not have your redeem scripts backed up please take this a warning and do a [backup](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script) and store it along with your seed.
 
-Exmo.com had a sudden DCR [outage](https://twitter.com/Exmo_Com/status/1240255377507303431) that coincided with the fork, the services [resumed](https://twitter.com/Exmo_Com/status/1240627750005870592) the next day. The addition of DCR to the exmo platform was [paid](https://proposals.decred.org/proposals/950e8149e594b01c010c1199233ab11e82c9da39174ba375d286dc72bb0a54d7) for by stakeholders.
-
-
-User AGspearo was not able to access their [funds](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) due to the VSP d1pool shutting down without notice and them not having access to their redeem script. AGspearo spent a lot of time on support trying to resolve this issue but ultimately they were unable to get their funds. @davecgh broke down the issue as a [comment](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkiac45) and also said a possible consensus change might solve these [issues](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkku35k).  If you are reading this and do not have your redeem script backed up please take this a warning and do a [backup](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script) and store it along with your seed.
-
-Some VSP's that had broken signup pages/out of date/returning errors had been [put on notice](https://github.com/decred/dcrwebapi/pulls?q=is%3Apr+created%3A%3E2020-02-29+author%3Ajholdstock) that they will be removed. Some of them have responded and fixed the issues. raqamiya.net,tokensmart.io and dcrpos.idcray.com have been removed since they failed to respond.
-
+Some VSPs that had broken signup pages/out of date/returning errors had been [put on notice](https://github.com/decred/dcrwebapi/pulls?q=is%3Apr+author%3Ajholdstock+created%3A2020-03-01..2020-03-31) that they will be removed. Some of them have responded and fixed the issues. raqamiya.net, tokensmart.io and dcrpos.idcray.com have been removed since they failed to respond.
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
