Gov link pidigest 29

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -194,6 +194,8 @@ The Market Making proposal from i2 Trading is nearing the end of the six months 
 
 @bee has extensively [commented](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/) on the 2019 Marketing Report and shared his vision for moving forward.
 
+For more detail on the month's Politeia activity see Politeia Digest [issue 29](https://blockcommons.red/politeia-digest/issue029/).
+
 ## Network
 
 Hashrate: [March's hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) opened at ~359 Ph/s and closed ~309 Ph/s, bottoming at 274 Ph/s and peaking at 556 Ph/s throughout the month. Pool [hashrate distribution](https://dcrstats.com/pow) as of Apr 1: UUPool 55%, Poolin 18%, lab.antpool.com 17%, Luxor 2.5%, BTC.com 2.2%, F2Pool 1.5%, BeePool 0.13%, CoinMine 0.08%, Suprnova 0.02% and others ~3.8%. Pool distribution numbers are approximate and cannot be accurately determined.
