--- a/journal/202003.md
+++ b/journal/202003.md
@@ -230,22 +230,22 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
-
 @bee [published](https://github.com/decredcommunity/wiki/blob/master/wiki/misconceptions.md) a comprehensive compilation of common misconceptions about Decred, along with responses to them.
 
-Monde PR's achievements:
+Monde PR's achievements for March:
 
--	Outreach and introductions to target journalists 
--	Pitched reactive comments to current news stories  
--	Submitted comments from Decred spokespeople to seven news stories 
--	Pitched Decred to three upcoming features 
--	Submitted thought leadership piece written by @RichardRed to ValueWalk 
--	Secured two media interviews 
--	Secured the following news coverage: 
-  - An [article](https://cointelegraph.com/news/proof-of-stake-vs-proof-of-work-which-one-is-fairer) in Cointelegraph featuring commentary from @jy-p on consensus models
-  - An [article](https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/) in Finance Magnates featuring commentary from @RichardRed on remote working 
-  - An [article](https://www.coindesk.com/remote-working-proves-unexpected-hero-as-half-of-us-economy-shifts-to-home-offices) in CoinDesk featuring commentary from @jy-p on rapid scaling which was also syndicated to Yahoo Finance
+- Outreach and introductions to target journalists.
+- Pitched reactive comments to current news stories.
+- Submitted comments from Decred spokespeople to 7 news stories.
+- Pitched Decred to 3 upcoming features.
+- Submitted thought leadership piece written by @richardred to ValueWalk.
+- Secured 2 media interviews.
+
+The following news coverage was secured:
+
+- An [article](https://cointelegraph.com/news/proof-of-stake-vs-proof-of-work-which-one-is-fairer) in Cointelegraph featuring commentary from @jy-p on consensus models.
+- An [article](https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/) in Finance Magnates featuring commentary from @richardred on remote working.
+- An [article](https://www.coindesk.com/remote-working-proves-unexpected-hero-as-half-of-us-economy-shifts-to-home-offices) in CoinDesk featuring commentary from @jy-p on rapid scaling which was also syndicated to Yahoo Finance.
 
 ## Events
 
