Add plans for v1.6

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -160,6 +160,10 @@ Other:
 
 Dev activity stats for March: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
+## Plans for v1.6
+
+> The rough plan is for v1.6 to get released at end of Q2. We're planning to include: decentralized treasury consensus change, Decrediton staking and non-staking CSPP support, ticket-based VSP support, and a myriad dcrd improvements. (@jy-p on [2020-03-20](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15855719584400kpyNr:decred.org))
+
 ## People
 
 Welcome to new first time contributors with code merged to master: @unimere ([decrediton](https://github.com/decred/decrediton/commits?author=unimere)).
