Dev decrediton cold staking

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -42,7 +42,7 @@ dcrd has less than 16% code overlap with btcd meaning that 84% is the new develo
 
 [Decrediton](https://github.com/decred/decrediton):
 
-- support for [cold staking](https://github.com/decred/decrediton/pull/2424) (work towards Trezor staking) { is it full support tangible by the user or one step to it? if the latter, clarify what exactly is added. and what is the ticket signing flow with this cold staking? }
+- support for [cold staking](https://github.com/decred/decrediton/pull/2424) (also required for staking with hardware wallets)
 - support for [importing scripts](https://github.com/decred/decrediton/pull/2423) in watch-only wallets
 - retrieve passed [agendas](https://github.com/decred/decrediton/pull/2442) from dcrdata
 - check for [new proposals](https://github.com/decred/decrediton/pull/2420) on the Governance tab
