--- a/journal/202003.md
+++ b/journal/202003.md
@@ -302,29 +302,21 @@ A lot of events were canceled or [rescheduled](https://matrix.to/#/!aNPTuiryMFmd
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
 Selected articles:
 
-- {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
-- Observing Ethereum Governance during the ProgPoW debate by @checkmate ([medium](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad))
+- Observing Ethereum Governance during the ProgPoW Debate by @Checkmate ([medium](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad))
 - Crypto Risk is Not What You Think by @Dustorf ([medium](https://medium.com/@dlefebvr/crypto-risk-is-not-what-you-think-8a2662840b70))
-- https://beincrypto.com/could-proof-of-stake-cryptocurrencies-lead-to-more-centralization/ 
-- Theory of Three Pillars in the Cypherpunk Social Contract by @Cato_io ([medium](https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a))
-- https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a {good?}
-- Brad Mill's opinion why Decred will fail https://medium.com/@bradmillscan/since-decred-is-competing-with-bitcoin-its-designed-to-fail-a13df8b5abbb (_missed in Jan_ RR: deliberately missed in Jan, it's junk)
+- Power and Seigniorage in Proof of Stake by Ryan Watkins ([messari.io](https://messari.io/article/power-and-seigniorage-in-proof-of-stake)) - paywalled but there's also a companion [Twitter thread](https://twitter.com/RyanWatkins_/status/1234554810977918976) making the case that in pure PoS initial holders can stay in power forever
+- Theory of Three Pillars in the Cypherpunk Social Contract by @Cato\_io ([medium](https://medium.com/@cato_io/threepillarstheory-cd6b57c5d88a))
+- Public Service, Pandemics and Crypto Networks by @mrbulb ([medium](https://medium.com/@decentpartners/public-service-pandemics-and-crypto-networks-379dce1594d1))
 - Decred: How Does Your Development Continue During the Bear Market? by @adcade (in Spanish, [es.cointelegraph.com](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market))
-- https://medium.com/@decentpartners/public-service-pandemics-and-crypto-networks-379dce1594d1
 
-The Brazil marketing and events [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5) was covered in the media (in Portuguese):
+The Brazil marketing and events [proposal](https://proposals.decred.org/proposals/bc20f986c3ea2fed2ea074c377a89f1a4b956ea0d527a8b6c099a5a8f175beb5) was covered in the media from an interesting "investment in Brazil" perspective (in Portuguese):
 
 - "Decred's Community Allows More than 500,000 BRL to be Invested in Brazil" ([criptofacil.com](https://www.criptofacil.com/comunidade-decred-permite-que-mais-r-500-mil-sejam-investidos-brasil/))
 - "Cryptocurrency Will Invest More than Half a Million in Brazil" ([livecoins.com.br](https://livecoins.com.br/criptomoeda-vai-investir-mais-meio-milhao-brasil/))
 - "'Whales' Approve and Decred Can Invest More than 500,000BRL to Promote Cryptocurrency in Brazil" ([cointelegraph.com.br](https://cointelegraph.com.br/news/decred-pode-investir-ate-us-500-mil-para-promover-criptomoeda-no-brasil)) - this one is poorly written and is based on another interview (@emiliomann)
 - "The Cryptocurrencies that Invest the Most in Brazil" ([cointimes.com.br](https://cointimes.com.br/as-criptomoedas-que-mais-investem-no-brasil/))
-
 
 Translations:
 
