--- a/journal/202003.md
+++ b/journal/202003.md
@@ -321,6 +321,8 @@ The Brazil marketing and events [proposal](https://proposals.decred.org/proposal
 Translations:
 
 - Theory of Three Pillars in the Cypherpunk Social Contract - [in Spanish](https://medium.com/decred-es/teor%C3%ADa-de-los-tres-pilares-en-el-contrato-social-del-cypherpunk-40f569836b6a) by @francov\_
+- Decred Technical Brief - [in Arabic](https://insaf01.github.io/decred-arabic/articles/decred-technical-brief-ar.html) by @arij
+- Decred Journal February 2020 was translated to Arabic (@arij), Chinese (@Dominic) and Spanish (@francov\_). All three are stored [in Git](https://github.com/xaur/decred-news/blob/docs/guidelines.md#why-git) which helps to preserve the work long-term and protect it from censorship. Thank you all for spreading the word!
 
 Videos:
 
@@ -330,12 +332,11 @@ Videos:
 
 Audio:
 
-- Rough Consensus Ep. 2 - Distributed Consensus ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus))
-- Decred in Depth Ep. 19 - Leo Zhang of Iterative Capital talks about Proof of Work mining, gives a first hand account of mining economics, and considers the benefits of a hybrid PoS component and formal stakeholder decision-making. ([soundcloud](https://soundcloud.com/decredindepth/leo-zhang-dcr-mining))
-- Rough Consensus Ep. 3 - The Long Road Ahead ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead))
-- POV Crypto Podcast Ep. 127 - Hard Money in the Time of Brrr with @permabullnino ([libsyn](https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino))
-- https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino { is this about dcr? rr: yes at least partially, see 30:00}
-- https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead
+- Decred in Depth Ep. 19 - Leo Zhang of Iterative Capital talks about Proof of Work mining, gives a first hand account of mining economics, and considers the benefits of a hybrid PoS component and formal stakeholder decision-making. ([libsyn](https://decredindepth.libsyn.com/leo-zhang-dcr-mining), [youtube](https://www.youtube.com/watch?v=iWi3nK0HIHE), [soundcloud](https://soundcloud.com/decredindepth/leo-zhang-dcr-mining))
+- Decred in Depth Ep. 21 - Exitus on DCR Community Managment & Media. ([libsyn](https://decredindepth.libsyn.com/-exitus-dcr-community-managment-media), [youtube](https://www.youtube.com/watch?v=oGi3NA14CZU))
+- Rough Consensus Ep. 2 - Distributed Consensus. @mr.black, @Checkmate and @permabullnino discuss the concept of triple entry accounting and how it provides a framework for analyzing consensus mechanisms. The theory is that PoW, PoS and hybrid security systems provide different security and ledger assurances. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-2-distributed-consensus))
+- Rough Consensus Ep. 3 - The Long Road Ahead. @mr.black, @Checkmate and @permabullnino discuss the latest macro shift triggered by COVID-19, the popping of the longest equities bull market in history, and how cryptocurrencies can play a role in the future. ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-3-the-long-road-ahead))
+- POV Crypto Podcast Ep. 127 - Hard Money in the Time of Brrr with @permabullnino ([libsyn](https://povcryptopod.libsyn.com/127-hard-money-in-the-time-of-brrr-with-permabullnino), Decred mentioned around 30 min mark)
 - What is Decred? by @elian (in Spanish, [criptotendencias.com](https://www.criptotendencias.com/podcast/episodio-30-que-es-decred-entrevista-con-elian-huesca-community-builder-business-dev-del-proyecto/))
 - Decred Brief by @elian (in Spanish, [Territorio Bitcoin](https://www.ivoox.com/episodio-111-especial-comunidad-blockchain-cuarentena-audios-mp3_rf_49382826_1.html))
 
