--- a/journal/202003.md
+++ b/journal/202003.md
@@ -275,7 +275,6 @@ Attended:
 - Mar 18 - [Exchanges in LATAM](https://twitter.com/Decred_ES/status/1240428280756310018) - Internet. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and it was learned that online talks should be 30 min or less.
 - Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - Internet. @tomee and @camilolwi talked all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. ([video](https://www.youtube.com/watch?v=U07ZL_qFAQM))
 - Mar 27 - [Hablemos Decred 02](https://twitter.com/Decred_ES/status/1243214184793485314) - Internet. Second Spanish online meetup explored Jitsi to connect 13 participants from Argentina, Mexico, Bolivia, Chile, of which 7 were new to the project. This time the call started with an intro talk about Decred, a demo of Decrediton, and an open mic for questions and comments. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200327-hablemosdecred-02-internet.md))
-- Mar 28 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. { @guisso did it happen? }
 - Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in Binance Spanish Telegram group with 8,000+ members and received a high level of engagement. @adcade, @elian and @pablito got 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
 - Mar 30 - [Decred and Sound Money Virtual Meetup](https://www.meetup.com/Decred-Australia/events/269640276/) - Internet. The event was hosted by @eSizeDave and @zohand and joined by @Checkmate to discuss key topics such as sound money, the macroeconomic environment, gold, and Decred. Participants were quite impressed by the quality and left good fedback, one of them enjoying that it was "mentally stimulating". ([report](https://github.com/decredcommunity/events/blob/master/reports/20200330-decred-and-sound-money-internet.md))
 
@@ -288,6 +287,7 @@ Upcoming:
 - May 30-31 - [Bitconf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. Decred will have multiple talks on various subjects.
 - June - [Campus Party Amazonia](https://brasil.campus-party.org/campus-party-amazonia-2020/) - Manaus, Brazil. Moved from March.
 - June - [Jalisco Talend Land](https://www.talent-land.mx/en/home/) - Guadalajara, Mexico. Moved from April.
+- End of 2020 - [DevOpsDays](https://devopsdays.org/events/2020-natal/welcome/) - Natal, Brazil. Moved from March.
 
 Postponed until further notice:
 
@@ -451,5 +451,5 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 Credits (alphabetical order):
 
 - writing and editing: bee, elian, degeri, l1ndseymm, pablito, richardred, s\_ben
-- reviews and feedback: adcade, ammarooni, davecgh, emiliomann, jholdstock, jrick, lukebp, matheusd, michae2xl, raedah
+- reviews and feedback: adcade, ammarooni, davecgh, emiliomann, guisso, jholdstock, jrick, lukebp, matheusd, michae2xl, raedah
 - title image: {}
