Comm Disc polish

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -345,32 +345,20 @@ Audio:
 
 Comm systems news:
 
-- https://dcrcomic.org/guide-enter-the-matrix.html
+- A guide how to join Decred Matrix community was published at [docs.decred.org](https://docs.decred.org/getting-started/joining-matrix-channels/). If you prefer to be guided by the Stakey, a slightly different version is available at [dcrcomic.org](https://dcrcomic.org/guide-enter-the-matrix.html).
 - FYI you can watch the [r/decred comment feed](https://www.reddit.com/r/decred/comments/) to never miss a new comment.
-
-{selected discussed topics, as bullet list or one paragraph per topic}
 
 Selected Reddit posts:
 
-- /u/oiezz has suggested using the monthly Journal posts as discussion spaces, and last month's [post](https://www.reddit.com/r/decred/comments/fgo0p4/decred_journal_february_2020/) has accumulated 18 comments.
-
-- @bee has [compiled](https://www.reddit.com/r/decred/comments/frqkt0/your_favorite_misconceptions_about_decred_in_one/) "Your favorite misconceptions about Decred in one place"
-
-- A [post](https://www.reddit.com/r/decred/comments/fhrsqn/austerity_mindset/fkd6nrn/) from /u/Corp-Por asking whether Decred should adopt an austerity mindset with Treasury funds had 22 comments and a score of 7. Most of the commenters were not as keen as the OP to make drastic changes, citing the Treasury's ample reserves and capacity to maintain funding at current rates for 5 years.
-
-- A [post](https://www.reddit.com/r/decred/comments/frb863/next_privacy_iteration_how_private_and_fungible/) asking about Decred's next privacy iteration had @jy-p respond to say that the approach is to pick the low-hanging fruit (Decrediton support, PQ-security), continue to increase mixing uptake, then re-visit questions about how to enhance privacy further.
-
-- @davecgh [responded](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) to the unfortunate story of a Decred stakeholder who has lost access to their staked DCR because the VSP they were using went offline, their Decrediton machine was destroyed, and they had not saved the redeem script (see details [here](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script)). @davecgh explained that the the redeem script is shared with the VSP as a multi-sig where either the user or VSP can redeem locked DCR and revoke tickets. As redeem scripts are re-used and revealed when the first ticket is redeemed, this stuck DCR scenario can only occur when the wallet of the user or VSP has never been online to redeem any of the tickets that used it. Once a single ticket has been redeemed by that wallet/VSP combination, the script is effectively stored in the blockchain.
-
-  
+- u/oiezz has suggested using the monthly Journal posts as discussion spaces, and last month's [post](https://www.reddit.com/r/decred/comments/fgo0p4/decred_journal_february_2020/) has accumulated 18 comments.
+- A [post](https://www.reddit.com/r/decred/comments/fhrsqn/austerity_mindset/fkd6nrn/) from u/Corp-Por asking whether Decred should adopt an austerity mindset with Treasury funds had 22 comments and a score of 7. Most of the commenters were not as keen as the OP to make drastic changes, citing the Treasury's ample reserves and capacity to maintain funding at current rates for 5 years.
+- A [post](https://www.reddit.com/r/decred/comments/frb863/next_privacy_iteration_how_private_and_fungible/) asking about Decred's next privacy iteration had @jy-p respond to say that the approach is to pick the low-hanging fruit (Decrediton support, post-quantum security), continue to increase mixing uptake, then revisit questions about how to enhance privacy further.
+- @davecgh [responded](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) to the unfortunate story of a Decred stakeholder who has lost access to their staked DCR because the VSP they were using went offline, their Decrediton machine was destroyed, and they had not saved the redeem script (see details [here](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script)). @davecgh explained that the redeem script is shared with the VSP as a multi-sig where either the user or VSP can redeem locked DCR and revoke tickets. As redeem scripts are reused and revealed when the first ticket is redeemed, this stuck DCR scenario can only occur when the wallet of the user or VSP has never been online to redeem any of the tickets that used it. Once a single ticket has been redeemed by that wallet/VSP combination, the script is effectively stored in the blockchain.
 
 Selected Twitter discussions:
 
 - @swack lost his hammer and tweeted this [thread](https://twitter.com/swack0/status/1239674494526111747) about Decred as the only non-Bitcoin cryptoasset that deserves consideration as SoV and fiat alternative, citing adaptability, sustainability, and lack of associated leveraged financial products.
-
-- DCP-0006 Social Media Governance, [announced](https://twitter.com/decredproject/status/1245399765489254400?s=20) Apr 1, is in doubt with an unexpectedly large proportion of respondents (66%) to the twitter poll voting to give twitter the greatest weighting - this raises serious questions about the sampling methodology.
-
-  
+- DCP-0006 Social Media Governance, [announced](https://twitter.com/decredproject/status/1245399765489254400?s=20) Apr 1, is in doubt with an unexpectedly large proportion of respondents (66%) to the Twitter poll voting to give Twitter the greatest weighting - this raises serious questions about the sampling methodology.
 
 ## Markets
 
